--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
@@ -19,6 +17,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnRail">
+        <activity
+            android:name=".TerritoryActivity"
+            android:allowEmbedded="true"
+            android:exported="false"
+            android:label="@string/title_activity_territory"
+            android:resizeableActivity="true"
+            android:theme="@style/Theme.OnRail"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".TrainActivity"
             android:allowEmbedded="true"
