--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ playServicesLocation = "21.3.0"
 mapcompose = "3.0.0"
 appUpdate = "2.1.0"
 appUpdateKtx = "2.1.0"
+coreSplashscreen = "1.2.0-rc01"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -48,6 +49,7 @@ play-services-location = { group = "com.google.android.gms", name = "play-servic
 mapcompose = { group = "ovh.plrapps", name = "mapcompose", version.ref = "mapcompose" }
 app-update = { group = "com.google.android.play", name = "app-update", version.ref = "appUpdate" }
 app-update-ktx = { group = "com.google.android.play", name = "app-update-ktx", version.ref = "appUpdateKtx" }
+androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashscreen" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
